# Solemne1

./: .dockerignore  .gitignore  README.md  dockerfile  main.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: main.yml
